--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -505,12 +505,20 @@
                     <input id="reputationCost" type="text" placeholder="Cost of reputation">
                     <div class="ui basic label">.00</div>
                   </div>
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
+                    <select name="skills" multiple="" class="ui fluid dropdown normal search skills-dropdown">
+                      <option value="">Add gig tags (limit: 10)...</option>
+                      <option value="programming">Programming</option>
+                      <option value="copywriting">Copywriting</option>
+                      <option value="userexperience">User Experience</option>
+                    </select>
+                  </div>
                   <div class="mdl-textfield mdl-js-textfield whole-line">
                     <textarea id="description" type="text" rows="3" name="description" class="mdl-textfield__input"></textarea>
                     <label for="description" class="mdl-textfield__label">Description (what have you done or currently do?)</label>
                   </div>
                   <div class="ui right labeled input">
-                    <label for="amount" class="ui label">$</label>
+                    <label for="amount" class="ui label"><i class="material-icons">polymer</i></label>
                     <input id="amount" type="text" placeholder="Amount">
                     <div class="ui basic label">.00</div>
                   </div>
@@ -682,13 +690,24 @@
                     <input id="last-name" name="last-name" type="text" class="mdl-textfield__input">
                     <label for="last-name" class="mdl-textfield__label">Last Name</label>
                   </div>
-                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
-                    <input id="hourly-rate" type="text" name="hourly-rate" class="mdl-textfield__input">
-                    <label for="hourly-rate" class="mdl-textfield__label">Hourly Rate</label><span class="mdl-textfield__error">Input is not a number!</span>
-                  </div>
-                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label right-side">
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
                     <input id="title" type="text" name="title" class="mdl-textfield__input">
                     <label for="title" class="mdl-textfield__label">Title</label>
+                  </div>
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
+                    <select name="skills" multiple="" class="ui fluid dropdown normal search skills-dropdown">
+                      <option value="">Add skills tags (limit: 10)...</option>
+                      <option value="angular">Angular</option>
+                      <option value="python">Python</option>
+                      <option value="userexperience">User Experience</option>
+                    </select>
+                  </div>
+                  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
+                    <select name="skills" multiple="" class="ui fluid dropdown normal search languages-dropdown">
+                      <option value="">Add languages you know (limit: 10)...</option>
+                      <option value="bulgarian">Bulgarian</option>
+                      <option value="lithuanian">Lithuanian</option>
+                    </select>
                   </div>
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
                     <div id="country" style="float: left" class="ui search selection dropdown">
@@ -805,7 +824,6 @@
               <h2></h2>
               <h5 class="profile-information-position"></h5>
               <p class="location"></p>
-              <button class="hire">Hire ($X/hr)</button>
               <button class="leave-msg">Send Message</button>
             </div>
           </div>
@@ -832,15 +850,10 @@
             <ul role="tablist" class="nav nav-tabs">
               <li role="presentation" class="active timeline-li"><a href="#gigs" aria-controls="gigs" role="tab" data-toggle="tab">Gigs</a></li>
               <li role="presentation" class="timeline-li"><a href="#portfolio" aria-controls="portfolio" role="tab" data-toggle="tab">Portfolio</a></li>
-              <li role="presentation" class="timeline-li"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
               <li class="dropdownButton">
                 <button id="addThings" class="mdl-button mdl-js-button mdl-button--icon"><i class="material-icons">add</i></button>
                 <ul for="addThings" class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect">
                   <li open-modal="#add-portfolio" class="mdl-menu__item open-modal">Add Portfolio Element</li>
-                  <li open-modal="#add-job" class="mdl-menu__item open-modal">Add Work Experience</li>
-                  <li open-modal="#add-education" class="mdl-menu__item open-modal">Add Education</li>
-                  <li open-modal="#add-language" class="mdl-menu__item open-modal">Add Language</li>
-                  <li open-modal="#add-skill" class="mdl-menu__item open-modal">Add Skill</li>
                   <li open-modal="#add-gig" class="mdl-menu__item open-modal">Add Gig</li>
                 </ul>
               </li>
@@ -851,18 +864,6 @@
               <div id="gigs" role="tabpanel" class="tab-pane fade in active col-xs-12"></div>
               <!-- Portfolio TAB-->
               <div id="portfolio" role="tabpanel" class="tab-pane fade col-xs-12"></div>
-              <!-- Profile TAB-->
-              <div id="profile" role="tabpanel" class="tab-pane fade col-xs-12">
-                <div class="jobs-container">
-                  
-                </div>
-                <div class="education-container">
-                  
-                </div>
-                <div class="languages-container">
-                </div>
-                <div class="skills-container"></div>
-              </div>
             </div>
           </div>
         </div>
@@ -921,9 +922,9 @@
                   </div>
                 </div>
               </div>
-              <div class="marker marker-0"><sup>$</sup>0</div>
-              <div class="marker marker-50"><sup>$</sup>5,000</div>
-              <div class="marker marker-100"><sup>$</sup>10,000+</div>
+              <div class="marker marker-0"><sup><i class="material-icons">polymer</i></sup>0</div>
+              <div class="marker marker-50"><sup><i class="material-icons">polymer</i></sup>5,000</div>
+              <div class="marker marker-100"><sup><i class="material-icons">polymer</i></sup>10,000+</div>
             </div>
           </div>
         </div>
@@ -949,89 +950,10 @@
                 <h6 class="expire">expires in 5 mins</h6>
               </div>
               <div class="footer">
-                <h4>Starting at <span>$25</span></h4>
+                <h4>Starting at <span><i class="material-icons">polymer</i>25</span></h4>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </section>
-    <!-- Including {JOBS} page content-->
-    <section style="display: none" class="jobs-page-content">
-      <div class="container">
-        <div class="filters col-md-3">
-          <div class="filter">
-            <p>Category</p>
-            <label for="checkbox-1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-1" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Development</span>
-            </label>
-            <label for="checkbox-2" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-2" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Mobile Development</span>
-            </label>
-            <label for="checkbox-3" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-3" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Graphic Design</span>
-            </label>
-            <label for="checkbox-4" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-4" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Content Writing</span>
-            </label>
-            <label for="checkbox-5" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-5" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Accountants</span>
-            </label>
-            <label for="checkbox-6" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-6" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Consultants</span>
-            </label>
-            <label for="checkbox-7" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-7" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Assistants</span>
-            </label>
-          </div>
-          <div class="filter">
-            <p>Job Type</p>
-            <label for="checkbox-8" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-8" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Hourly</span>
-            </label>
-            <label for="checkbox-9" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-9" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Fixed Price</span>
-            </label>
-          </div>
-          <div class="filter">
-            <p>Experience Level</p>
-            <label for="checkbox-10" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-10" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Entry Level</span>
-            </label>
-            <label for="checkbox-11" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-11" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Intermediate</span>
-            </label>
-            <label for="checkbox-12" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-12" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">Expert</span>
-            </label>
-          </div>
-          <div class="filter">
-            <p>Budget</p>
-            <div class="rkmd-slider slider-continous slider-shadow slider-lightBlue slider-light">
-              <input type="range" min="0" max="100" value="65">
-            </div>
-            <label for="checkbox-13" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-13" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label"><$100</span>
-            </label>
-            <label for="checkbox-14" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-14" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$100 - $500</span>
-            </label>
-            <label for="checkbox-15" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-15" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$500 - $1k</span>
-            </label>
-            <label for="checkbox-16" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-16" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$1k - $5k</span>
-            </label>
-            <label for="checkbox-17" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-17" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$5k - $50k</span>
-            </label>
-            <label for="checkbox-18" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-              <input id="checkbox-18" type="checkbox" class="mdl-checkbox__input"><span class="mdl-checkbox__label">$50k+</span>
-            </label>
-          </div>
-        </div>
-        <div class="jobs col-md-9">
-          <p>Jobs</p>
         </div>
       </div>
     </section>
