--- a/ethnode/cdnapidef/swagger/index.html
+++ b/ethnode/cdnapidef/swagger/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Swagger UI</title>
+  <title>Swagger CDN API UI</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Code+Pro:300,600|Titillium+Web:400,600,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
   <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
@@ -67,14 +67,14 @@
 
 <div id="swagger-ui"></div>
 
-<script src="/api/ui/swagger-ui-bundle.js"> </script>
-<script src="/api/ui/swagger-ui-standalone-preset.js"> </script>
+<script src="/api/cdn/swagger-ui-bundle.js"> </script>
+<script src="/api/cdn/swagger-ui-standalone-preset.js"> </script>
 <script>
 window.onload = function() {
   
   // Build a system
   const ui = SwaggerUIBundle({
-    url: "/api/ui/v1.yaml",
+    url: "/api/cdn/v1.yaml",
     dom_id: '#swagger-ui',
     deepLinking: true,
     presets: [
