Connecting profile page with an API and making sure you can change your avatar in profile

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -759,7 +759,10 @@
               </div>
             </div>
             <div class="modal-body">
-              <!-- This is from avatar ui modal.-->
+              <div class="form-group">
+                <input id="input-image-profile" type="file" accept="image/*" placeholder="Add image or video" class="input-file">
+                <label for="input-image-profile" class="img-label">Add Photo</label><img src="images/image-video-image-file.png" alt="Add a file" class="file-input-first-image img-profile"><img id="input-image-profile" src="#" alt="" class="show-image empty">
+              </div>
               <div class="modal-inputs">
                 <form id="form-update-education" action="POST">
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label left-side">
