profile data is now able to update and load

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -714,7 +714,7 @@
               <li class="mdl-menu__item delete">Delete</li>
             </ul>
             <h2 class="title">Title goes here</h2>
-            <div class="owner-info"><img src="/api/v1/profile/?q=avatar" alt="Avatar">
+            <div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">
               <h5>owner_nickname</h5>
               <h4><i class="material-icons">polymer</i> 306 <span>expires in a day</span></h4>
             </div>
@@ -907,6 +907,16 @@
               <h5 class="profile-information-position"></h5>
               <p class="location"></p>
               <button class="leave-msg">Send Message</button>
+              <!-- SKILLS-->
+              <p class="skills-text">Skills <i class="skills-down material-icons">keyboard_arrow_down</i></p>
+              <div class="skills hidden">
+              </div>
+              <!-- LANGUAGES-->
+              <p class="skills-text">Languages <i class="languages-down material-icons">keyboard_arrow_down</i></p>
+              <div class="languages hidden">
+                
+                
+              </div>
             </div>
           </div>
           <div class="profile-information middle">
@@ -951,7 +961,7 @@
                       <div class="ui black ribbon label">Category</div>
                       <div class="image-block"><img src="images/paypal.jpg"></div>
                     </div>
-                    <div class="owner-info"><img src="/api/v1/profile/?q=avatar" alt="Avatar">
+                    <div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">
                       <h5>owner_nickname</h5>
                       <h4>Entry Level</h4>
                     </div>
@@ -983,7 +993,7 @@
                       <div class="ui black ribbon label">Category</div>
                       <div class="image-block"><img src="images/paypal.jpg"></div>
                     </div>
-                    <div class="owner-info"><img src="/api/v1/profile/?q=avatar" alt="Avatar">
+                    <div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">
                       <h5>owner_nickname</h5>
                       <h4>Entry Level</h4>
                     </div>
@@ -1074,7 +1084,7 @@
                 <div class="ui black ribbon label">Category</div>
                 <div class="image-block"><img src="images/paypal.jpg"></div>
               </div>
-              <div class="owner-info"><img src="/api/v1/profile/?q=avatar" alt="Avatar">
+              <div class="owner-info"><img src="http://via.placeholder.com/24x24" alt="Avatar">
                 <h5>owner_nickname</h5>
                 <h4>Entry Level</h4>
               </div>
