Bug fixes + portfolio data saving, loading

--- a/ethnode/webui/index.html
+++ b/ethnode/webui/index.html
@@ -314,7 +314,7 @@
         </div>
       </div>
     </div>
-    <div id="edit-portfolio" class="add modal-box flex floating">
+    <div id="edit-portfolio" class="edit modal-box flex floating">
       <div class="modal-box-content">
         <div class="inner-modal">
           <div class="content">
@@ -339,8 +339,8 @@
               <div class="modal-inputs">
                 <form action="POST">
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label whole-line">
-                    <input id="gig-title" name="gig-title" type="text" class="mdl-textfield__input">
-                    <label for="gig-title" class="mdl-textfield__label">Portfolio title</label>
+                    <input id="portfolio-title" name="portfolio-title" type="text" class="mdl-textfield__input">
+                    <label for="portfolio-title" class="mdl-textfield__label">Portfolio title</label>
                   </div>
                   <div class="mdl-textfield mdl-js-textfield whole-line">
                     <textarea id="description" type="text" rows="3" name="description" class="mdl-textfield__input"></textarea>
@@ -741,7 +741,7 @@
         </div>
       </div>
     </div>
-    <div id="edit-profile" class="modal-box flex floating">
+    <div id="edit-profile" class="modal-box edit flex floating">
       <div class="modal-box-content">
         <div class="inner-modal">
           <div class="content">
@@ -816,8 +816,8 @@
             </div>
             <div class="modal-footer">
               <button class="mdl-button mdl-js-button close-button">Close</button>
-              <button id="update1" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
-              <div data-mdl-for="update1" class="mdl-tooltip">This text will be changed anyway.</div>
+              <button id="updateProfile" style="color: #5CAB7D" class="mdl-button mdl-js-button finish-button">Update</button>
+              <div data-mdl-for="updateProfile" class="mdl-tooltip">This text will be changed anyway.</div>
             </div>
           </div>
         </div>
